--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {},
   "devDependencies": {
     "serverless-api-gateway-caching": "^1.6.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-apigwy-binary": "^1.0.0",
     "serverless-offline": "^6.8.0"
   }
 }
